--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-
+<canvas id="game" width="1280" height="640"></canvas>
 <body>
 
-  <script src="/js/main.js"></script>
-  </script>
+ <script src="js/main.js"></script>
+    <script src="js/draw_m.js"></script>
+    <script src="js/map.js"></script>
+    
 </body>
 
 </html>
