--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <script src="js/main.js"></script>
     <script src="js/draw_m.js"></script>
     <script src="js/map.js"></script>
-    
+    <script src="js/movement.js"></script>
 </body>
 
 </html>
