--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="js/draw_m.js"></script>
     <script src="js/map.js"></script>
     <script src="js/movement.js"></script>
+    <script src="js/ship.js"></script>
+    <script src="js/fight.js"></script>
+    <script src="js/encounter.js"></script>
+    
 </body>
 
 </html>
