--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <script src="js/ship.js"></script>
     <script src="js/fight.js"></script>
     <script src="js/encounter.js"></script>
+    <script src="js/endgame.js"></script>
+    <script src="js/mylib.js"></script>
+    <script src="js/button.js"></script>
     
+    <script src="js/load.js"></script>
 </body>
 
 </html>
