--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="js/endgame.js"></script>
     <script src="js/mylib.js"></script>
     <script src="js/button.js"></script>
+    <script src="js/draw_s.js"></script>
+    <script src="js/upgrade.js"></script>
     
     <script src="js/load.js"></script>
 </body>
