--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/button.js"></script>
     <script src="js/draw_s.js"></script>
     <script src="js/upgrade.js"></script>
+    <script src="js/logic.js"></script>
     
     <script src="js/load.js"></script>
 </body>
