--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <!DOCTYPE HTML>
 <html>
-<canvas id="game" width="1280" height="640"></canvas>
+
 <body>
 
+  <div class="w3-container">
+    <h2>Tabs</h2>
+    <p>Tabs are perfect for single page web applications, or for web pages capable of displaying different subjects. Click on the links below.</p>
+  </div>
+
+  <div class="w3-bar w3-black">
+    <button class="w3-bar-item w3-button" onclick="openCity('London')">London</button>
+    <button class="w3-bar-item w3-button" onclick="openCity('Paris')">Paris</button>
+    <button class="w3-bar-item w3-button" onclick="openCity('Tokyo')">Tokyo</button>
+  </div>
+
+  <div id="London" class="w3-container city">
+    <h2>London</h2>
+    <p>London is the capital city of England.</p>
+    <canvas id="game" width="1280" height="640"></canvas>
+  </div>
+
+  <div id="Paris" class="w3-container city" style="display:none">
+    <h2>Paris</h2>
+    <p>Paris is the capital of France.</p>
+  </div>
+
+  <div id="Tokyo" class="w3-container city" style="display:none">
+    <h2>Tokyo</h2>
+    <p>Tokyo is the capital of Japan.</p>
+  </div>
  <script src="js/main.js"></script>
     <script src="js/draw_m.js"></script>
     <script src="js/map.js"></script>
@@ -16,8 +42,17 @@
     <script src="js/draw_s.js"></script>
     <script src="js/upgrade.js"></script>
     <script src="js/logic.js"></script>
-    
     <script src="js/load.js"></script>
+    <script>
+function openCity(cityName) {
+  var i;
+  var x = document.getElementsByClassName("city");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  document.getElementById(cityName).style.display = "block";
+}
+</script>
 </body>
 
 </html>
