fix autosave and save

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <input type="text" id="impexp" style="display:block">
     <button onclick="fimport()"style="display:block">import current</button>
     <button onclick="fexport()">export current</button>
+    <button onclick="resetsave()">RESET COMPLETLY and clear autosave</button>
   </div>
 
 
