--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <button id="BPhealth+" class="w3-bar-item w3-button" onclick="fpuhealth('1')"style="display:none"></button>
     <button id="BPhealth-" class="w3-bar-item w3-button" onclick="fpuhealth('0')" style="display:none"></button>
     <p> One time perks </p>
-    <button id="BPshieldmaster" title="Will make you start the game with the shield upgrade aleardy one and at the shield pickup give a bonus" class="w3-bar-item w3-button" onclick="fshieldmaster()" style="display:none"></button>
+    <button id="BPshieldmaster" title="Will make you start the game with the shield upgrade aleardy on and at the shield pickup give a bonus" class="w3-bar-item w3-button" onclick="fshieldmaster()" style="display:none"></button>
   </div>
   <div id="Options" class="w3-container tab" style="display:none">
     <button onclick="fsave(0)">save auto</button>
